2020-09-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.0

2020-09-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* R/pkgKitten.R (kitten): Run tinytest::puppy unless opted out
	* man/kitten.Rd: Document new option 'puppy'
	* DESCRIPTION (Suggests): New suggested on 'tinytest'

	* R/pkgKitten.R (kitten): Copy-in replacement NAMESPACE
	* inst/replacements/NAMESPACE: Replacement NAMESPACE

	* docs/: Added package website
	* docs-src/: Added package website inputs

	* README.md: Added badge and short sentence linking to documentation

2020-09-25  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/R-CMD-check.yaml: Updated to matrix, simplified

2020-09-24  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (dist): Use focal for CI
	* .github/workflows/R-CMD-check.yaml: Renamed with hyphens

2020-09-18  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Use updated run.sh with BSPM support
	* .github/workflows/R.CMD.check.yaml: Idem

	* README.md: Add 'Actions' badge

2020-08-27  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/R.CMD.check.yaml: Renamed from main.yaml

2020-08-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* .github/workflows/main.yml: Add a GitHub Actions workflow
	* .Rbuildignore: Exclude .github

2020-05-30  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add 'last commit' badge

	* .travis.yml: Switch to bionic and R 4.0.0

2020-01-22  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add a Debian badge

2019-10-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.5

2019-10-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2019-10-17  Andrew Coleman  <30481896+aecoleman@users.noreply.github.com>

	* R/pkgKitten.R: Correct typo
	* man/playWithPerPackageHelpPage.Rd: Ditto

2019-03-24  Dirk Eddelbuettel  <edd@debian.org>
