@@ -1,3 +1,9 @@
+2020-11-02  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/pkgKitten.R (kitten): Support new option 'bunny' to use roxygen2
+	* man/kitten.Rd: Documentation
+	* inst/replacements/hello2.R: Dummy file with roxygen docs
+
 2020-09-27  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.2.0
